Update style.css : -1px margin-top added to  triangle-flag and square-flag classes in style.css to fix the issue with flag overlapping on the text above.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -168,16 +168,16 @@ body {
   background-size: cover;
   margin: auto;
   margin-bottom: 2px;
-  margin-top: -10px;
+  margin-top: -1px;
 }
 
 .triangle-flag {
-  height: 32px;
+  height: 26px;
   width: 32px;
   background: url("../images/flag-np.jpg") no-repeat;
   background-size: cover;
   margin: auto;
-  margin-top: -12px;
+  margin-top: -1px;
 }
 
 .heading-indivisuals {
